# ai-arch-assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  TUTORIAL.md  api_scraper.py  architecture.html  crawler.py  docker-compose.prod.yml  docker-compose.yml  law_exporter.py  requirements.txt  test_crawler.py  test_law_scraper.py  url_analyzer.py
.claude/: backlog.md
.github/workflows/: deploy.yml  sync-laws.yml
apps/lawchat/: package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
apps/lawchat/e2e/: fixtures.ts  lawchat.spec.ts
apps/lawchat/src/app/: globals.css  layout.tsx  page.tsx
apps/lawchat/src/app/api/documents/: route.ts
apps/lawchat/src/components/: LawChat.tsx
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/crawl/: page.tsx
apps/web/src/components/: DocumentLibrary.tsx  LawQuery.tsx  PDFUpload.tsx  TaskProgress.tsx  URLCrawl.tsx
cli/: pyproject.toml
cli/src/autocrawler_cli/: __init__.py  main.py
cli/src/autocrawler_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: pcode_map.json  pending-laws.md
docker/api/: Dockerfile
docker/lawchat/: Dockerfile
docker/nginx/: nginx.conf  nginx.prod.conf
docs/superpowers/plans/: 2026-03-13-github-pdf-source.md
docs/superpowers/specs/: 2026-03-13-github-pdf-source-design.md
scripts/: batch_ingest_laws.py  download_law_pdfs.py  init-ssl.sh  scan_pcodes.py  setup-vm.sh
(+1 files in other folders)
